--- a/Style.css
+++ b/Style.css
@@ -14,6 +14,10 @@ body {
 .head-tabs > *{
     margin: 10px;
     padding: 10px;
+    font-style: oblique;
+    border-bottom: 2px solid black;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 .main-tabs-content { 
